--- a/EffectusReunion/EffectusReunion/EffectusReunion.csproj
+++ b/EffectusReunion/EffectusReunion/EffectusReunion.csproj
@@ -128,6 +128,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VirtualMediaObjectModel\VirtualMediaNode.cs" />
+    <Compile Include="VirtualTransport\VirtualTransportControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
