--- a/EffectusReunion/EffectusReunion/EffectusReunion.csproj
+++ b/EffectusReunion/EffectusReunion/EffectusReunion.csproj
@@ -133,6 +133,7 @@
     <Compile Include="VirtualMediaObjectModel\VirtualMediaNode.cs" />
     <Compile Include="VirtualMediaObjectModel\VirtualMediaTextNode.cs" />
     <Compile Include="VirtualTransport\VirtualTransportControl.cs" />
+    <Compile Include="VirtualTransport\VirtualTransportVideoRender.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -174,6 +175,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.12</Version>
+    </PackageReference>
+    <PackageReference Include="Win2D.uwp">
+      <Version>1.26.0</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
