--- a/EffectusReunion/EffectusReunion/EffectusReunion.csproj
+++ b/EffectusReunion/EffectusReunion/EffectusReunion.csproj
@@ -128,6 +128,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderingLayer\Renderer.cs" />
+    <Compile Include="RenderingLayer\TextRenderer.cs" />
     <Compile Include="VirtualMediaObjectModel\IVirtualMediaNode.cs" />
     <Compile Include="VirtualMediaObjectModel\VirtualMediaContainerNode.cs" />
     <Compile Include="VirtualMediaObjectModel\VirtualMediaNode.cs" />
