--- a/EffectusReunion/EffectusReunion/EffectusReunion.csproj
+++ b/EffectusReunion/EffectusReunion/EffectusReunion.csproj
@@ -128,14 +128,10 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RenderingLayer\Renderer.cs" />
-    <Compile Include="RenderingLayer\TextRenderer.cs" />
-    <Compile Include="VirtualMediaObjectModel\IVirtualMediaNode.cs" />
-    <Compile Include="VirtualMediaObjectModel\VirtualMediaContainerNode.cs" />
-    <Compile Include="VirtualMediaObjectModel\VirtualMediaNode.cs" />
-    <Compile Include="VirtualMediaObjectModel\VirtualMediaTextNode.cs" />
-    <Compile Include="VirtualTransport\VirtualTransportControl.cs" />
-    <Compile Include="VirtualTransport\VirtualTransportVideoRender.cs" />
+    <Compile Include="MediaEntityTree\MediaContainerNode.cs" />
+    <Compile Include="MediaEntityTree\IMediaEntityNode.cs" />
+    <Compile Include="MediaTransportSystem\TransportControl.cs" />
+    <Compile Include="MediaTransportSystem\VirtualTransportVideoRender.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
