--- a/EffectusReunion/EffectusReunion/EffectusReunion.csproj
+++ b/EffectusReunion/EffectusReunion/EffectusReunion.csproj
@@ -127,6 +127,8 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MediaEntityTree\MediaEntityException.cs" />
+    <Compile Include="MediaEntityTree\MediaLoaderNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MediaEntityTree\MediaContainerNode.cs" />
     <Compile Include="MediaEntityTree\IMediaEntityNode.cs" />
